--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@
     <script>
         // Конфигурация Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyDndBcV29tFvBX-RGzCIAUVEnVy8G5GdJc",
-            authDomain: "whopper-a32f7.firebaseapp.com",
-            projectId: "whopper-a32f7",
-            storageBucket: "whopper-a32f7.appspot.com",
-            messagingSenderId: "Y701387895307",
-            appId: "1:701387895307:web:cc656083f5f0ed1c590d0e"
+           apiKey: "AIzaSyDndBcV29tFvBX-RGzCIAUVEnVy8G5GdJc",
+           authDomain: "whopper-a32f7.firebaseapp.com",
+           databaseURL: "https://whopper-a32f7-default-rtdb.europe-west1.firebasedatabase.app",
+           projectId: "whopper-a32f7",
+           storageBucket: "whopper-a32f7.appspot.com",
+           messagingSenderId: "701387895307",
+           appId: "1:701387895307:web:cc656083f5f0ed1c590d0e",
+           measurementId: "G-PQ6JZEZMEP"
         };
 
         // Инициализация Firebase
